[gd_scene load_steps=7 format=3 uid="uid://bva32pwklon34"]

[ext_resource type="Texture2D" uid="uid://bl83ptppm6nwo" path="res://ui/button_medium.png" id="1_5st6h"]
[ext_resource type="Script" path="res://ui/pause_menu.gd" id="1_f2ups"]
[ext_resource type="Texture2D" uid="uid://cv3uextp24kxo" path="res://ui/button_small.png" id="2_ecory"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2wbgv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cxgmb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bovtw"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f2ups")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -2
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0.633515, 0.656145, 1)

[node name="GuardarBtn" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 272.0
offset_top = 88.0
offset_right = 878.0
offset_bottom = 232.0
icon = ExtResource("1_5st6h")
flat = true

[node name="Sprite2D" type="Sprite2D" parent="ColorRect/GuardarBtn"]
modulate = Color(0, 0, 0, 0.215686)
z_index = -1
position = Vector2(304, 80)
texture = ExtResource("1_5st6h")

[node name="TextEdit" type="TextEdit" parent="ColorRect/GuardarBtn"]
layout_mode = 0
offset_left = 48.0
offset_top = 24.0
offset_right = 568.0
offset_bottom = 120.0
mouse_filter = 1
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 56
theme_override_styles/normal = SubResource("StyleBoxEmpty_2wbgv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_cxgmb")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_bovtw")
text = "GUARDAR PARTIDA"
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
use_default_word_separators = false

[node name="ConfigBtn" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 277.0
offset_top = 264.0
offset_right = 883.0
offset_bottom = 408.0
icon = ExtResource("1_5st6h")
flat = true

[node name="Sprite2D" type="Sprite2D" parent="ColorRect/ConfigBtn"]
modulate = Color(0, 0, 0, 0.215686)
z_index = -1
position = Vector2(304, 80)
texture = ExtResource("1_5st6h")

[node name="TextEdit" type="TextEdit" parent="ColorRect/ConfigBtn"]
layout_mode = 0
offset_left = 91.0
offset_top = 32.0
offset_right = 531.0
offset_bottom = 120.0
mouse_filter = 1
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 52
theme_override_styles/normal = SubResource("StyleBoxEmpty_2wbgv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_cxgmb")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_bovtw")
text = "CONFIGURACIÃ“N"
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
use_default_word_separators = false

[node name="SalirBtn" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 280.0
offset_top = 451.0
offset_right = 538.0
offset_bottom = 550.0
icon = ExtResource("2_ecory")
flat = true

[node name="Sprite2D" type="Sprite2D" parent="ColorRect/SalirBtn"]
modulate = Color(0, 0, 0, 0.215686)
z_index = -1
position = Vector2(128, 59)
texture = ExtResource("2_ecory")

[node name="TextEdit" type="TextEdit" parent="ColorRect/SalirBtn"]
layout_mode = 0
offset_left = 72.0
offset_top = 13.0
offset_right = 184.0
offset_bottom = 77.0
mouse_filter = 1
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxEmpty_2wbgv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_cxgmb")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_bovtw")
text = "SALIR"
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
use_default_word_separators = false

[node name="RegresarBtn" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 622.0
offset_top = 451.0
offset_right = 880.0
offset_bottom = 550.0
icon = ExtResource("2_ecory")
flat = true

[node name="Sprite2D" type="Sprite2D" parent="ColorRect/RegresarBtn"]
modulate = Color(0, 0, 0, 0.215686)
z_index = -1
position = Vector2(128, 59)
texture = ExtResource("2_ecory")

[node name="TextEdit" type="TextEdit" parent="ColorRect/RegresarBtn"]
layout_mode = 0
offset_left = 32.0
offset_top = 19.0
offset_right = 240.0
offset_bottom = 78.0
mouse_filter = 1
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 33
theme_override_styles/normal = SubResource("StyleBoxEmpty_2wbgv")
theme_override_styles/focus = SubResource("StyleBoxEmpty_cxgmb")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_bovtw")
text = "CONTINUAR"
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
use_default_word_separators = false
